Closed Bug 675485 Opened 13 years ago Closed 13 years ago

Fix PRBool misuses found in a debug build

Categories

(Developer Infrastructure :: Source Code Analysis, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
mozilla8

People

(Reporter: mwu, Assigned: mwu)

References

Details

(Whiteboard: [inbound])

Attachments

(1 file)

Attached patch FixSplinter Review
Found by boolcheck. Some of these were missed the first time due to my mozconfig not matching the tinderbox debug mozconfig.

bz:
 layout/generic/nsFrame.cpp                           |    4 ++--
 tools/trace-malloc/leaksoup.cpp                      |    2 +-

taras:
 startupcache/StartupCache.cpp                        |    2 +-
Attachment #549634 - Flags: review?(tglek)
Attachment #549634 - Flags: review?(bzbarsky)
Attachment #549634 - Flags: review?(tglek) → review+
Comment on attachment 549634 [details] [diff] [review]
Fix

r=me
Attachment #549634 - Flags: review?(bzbarsky) → review+
http://hg.mozilla.org/mozilla-central/rev/d11aaaf51059
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla8
Product: Core → Firefox Build System
Product: Firefox Build System → Developer Infrastructure
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: