Bug 675485 - Fix PRBool misuses found in a debug build, r=bz,taras